# cpp-dev-bootstrap

./: .gitignore  LICENSE  README.md  bootstrap.sh  new-project.sh
.github/workflows/: apt-bootstrap.yml  macos-bootstrap.yml
template/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  vcpkg.json
template/src/: main.cpp
